--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ variables:
   CHANNEL: unstable
   CINC_PRODUCT: cinc-foundation
   OMNIBUS_FIPS_MODE: "true"
-  GIT_CACHE: "false"
+  GIT_CACHE: "true"
   OMNIBUS_LOG_LEVEL: "info"
 
 workflow:
