--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,16 @@ package:amazonlinux-2:aarch64:
     PLATFORM_VER: "2"
     OMNIBUS_FIPS_MODE: "false"
 
+package:amazonlinux-2023:x86_64:
+  extends: .package:amazonlinux
+  image: cincproject/omnibus-amazonlinux:2023
+  cache:
+    key: amazonlinux:2034:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "2023"
+
 package:centos-7:x86_64:
   extends: .package:centos
   image: cincproject/omnibus-centos:7
@@ -314,6 +324,48 @@ package:windows-2012r2:
   variables:
     PLATFORM_VER: "2012r2"
 
+package:rockylinux-8:x86_64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  cache:
+    key: rockylinux:8:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "8"
+
+package:rockylinux-8:aarch64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  cache:
+    key: rockylinux:8:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "8"
+    OMNIBUS_FIPS_MODE: "false"
+
+package:rockylinux-9:x86_64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  cache:
+    key: rockylinux:9:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "9"
+
+package:rockylinux-9:aarch64:
+  extends: .package:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  cache:
+    key: rockylinux:9:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "9"
+    OMNIBUS_FIPS_MODE: "false"
+
 package:ubuntu-18.04:x86_64:
   extends: .package:ubuntu
   image: cincproject/omnibus-ubuntu:18.04
@@ -420,6 +472,16 @@ test:amazonlinux-2:aarch64:
     - docker-aarch64
   variables:
     PLATFORM_VER: "2"
+
+test:amazonlinux-2023:x86_64:
+  extends: .test:amazonlinux
+  image: cincproject/omnibus-amazonlinux:2023
+  needs:
+    - package:amazonlinux-2023:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "2023"
 
 test:centos-7:x86_64:
   extends: .test:centos
@@ -657,6 +719,46 @@ test:rhel-8:s390x:
   variables:
     PLATFORM_VER: "8"
 
+test:rockylinux-8:x86_64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  needs:
+    - package:rockylinux-8:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "8"
+
+test:rockylinux-8:aarch64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:8
+  needs:
+    - package:rockylinux-8:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "8"
+
+test:rockylinux-9:x86_64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  needs:
+    - package:rockylinux-9:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "9"
+
+test:rockylinux-9:aarch64:
+  extends: .test:rockylinux
+  image: cincproject/omnibus-rockylinux:9
+  needs:
+    - package:rockylinux-9:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "9"
+
 test:ubuntu-18.04:x86_64:
   extends: .test:ubuntu
   image: cincproject/omnibus-ubuntu:18.04
@@ -766,6 +868,7 @@ deploy:
     - package:source
     - package:amazonlinux-2:aarch64
     - package:amazonlinux-2:x86_64
+    - package:amazonlinux-2023:x86_64
     - package:centos-7:aarch64
     - package:centos-7:ppc64le
     - package:centos-7:x86_64
@@ -790,6 +893,10 @@ deploy:
     - package:opensuse-15:x86_64
     - package:rhel-7:s390x
     - package:rhel-8:s390x
+    - package:rockylinux-8:aarch64
+    - package:rockylinux-8:x86_64
+    - package:rockylinux-9:aarch64
+    - package:rockylinux-9:x86_64
     - package:ubuntu-18.04:aarch64
     - package:ubuntu-18.04:x86_64
     - package:ubuntu-20.04:aarch64
