--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -283,25 +283,25 @@ package:macos-13:aarch64:
     PLATFORM_VER: "13"
     OMNIBUS_FIPS_MODE: "false"
 
-package:macos-14:
-  extends: .package:macos
-  cache:
-    key: macos:14
-  tags:
-    - macos-14
-  variables:
-    PLATFORM_VER: "14"
-    OMNIBUS_FIPS_MODE: "false"
-
-package:macos-14:aarch64:
-  extends: .package:macos
-  cache:
-    key: macos:14:aarch64
-  tags:
-    - macos-14-aarch64
-  variables:
-    PLATFORM_VER: "14"
-    OMNIBUS_FIPS_MODE: "false"
+# package:macos-14:
+#   extends: .package:macos
+#   cache:
+#     key: macos:14
+#   tags:
+#     - macos-14
+#   variables:
+#     PLATFORM_VER: "14"
+#     OMNIBUS_FIPS_MODE: "false"
+#
+# package:macos-14:aarch64:
+#   extends: .package:macos
+#   cache:
+#     key: macos:14:aarch64
+#   tags:
+#     - macos-14-aarch64
+#   variables:
+#     PLATFORM_VER: "14"
+#     OMNIBUS_FIPS_MODE: "false"
 
 package:opensuse-15:x86_64:
   extends: .package:opensuse
@@ -634,23 +634,23 @@ test:macos-13:aarch64:
   variables:
     PLATFORM_VER: "13"
 
-test:macos-14:
-  extends: .test:macos
-  needs:
-    - package:macos-14
-  tags:
-    - macos-14
-  variables:
-    PLATFORM_VER: "14"
-
-test:macos-14:aarch64:
-  extends: .test:macos
-  needs:
-    - package:macos-14:aarch64
-  tags:
-    - macos-14-aarch64
-  variables:
-    PLATFORM_VER: "14"
+# test:macos-14:
+#   extends: .test:macos
+#   needs:
+#     - package:macos-14
+#   tags:
+#     - macos-14
+#   variables:
+#     PLATFORM_VER: "14"
+#
+# test:macos-14:aarch64:
+#   extends: .test:macos
+#   needs:
+#     - package:macos-14:aarch64
+#   tags:
+#     - macos-14-aarch64
+#   variables:
+#     PLATFORM_VER: "14"
 
 test:opensuse-15:x86_64:
   extends: .test:opensuse
@@ -821,8 +821,8 @@ deploy:
     - package:macos-12:aarch64
     - package:macos-13
     - package:macos-13:aarch64
-    - package:macos-14
-    - package:macos-14:aarch64
+#   - package:macos-14
+#   - package:macos-14:aarch64
     - package:opensuse-15:aarch64
     - package:opensuse-15:x86_64
     - package:rhel-7:s390x
@@ -901,12 +901,12 @@ cleanup:macos-13-aarch64:
   tags:
     - macos-13-aarch64
 
-cleanup:macos-14:
-  extends: .cleanup
-  tags:
-    - macos-14
-
-cleanup:macos-14-aarch64:
-  extends: .cleanup
-  tags:
-    - macos-14-aarch64
+# cleanup:macos-14:
+#   extends: .cleanup
+#   tags:
+#     - macos-14
+#
+# cleanup:macos-14-aarch64:
+#   extends: .cleanup
+#   tags:
+#     - macos-14-aarch64
