Add FreeBSD 13 builds
Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab/package.yml
+++ b/.gitlab/package.yml
@@ -37,6 +37,25 @@
     - mkdir -p ${CI_PROJECT_DIR}/data/debian/${PLATFORM_VER}
     - mv -v ${CI_PROJECT_DIR}/data/*.{deb,json} ${CI_PROJECT_DIR}/data/debian/${PLATFORM_VER}/
 
+.package:freebsd:
+  extends: .package
+  script:
+    - source /home/omnibus/load-omnibus-toolchain.sh
+    - bash caching.sh
+    - cd chef-foundation
+    - bundle config set --local path ${CI_PROJECT_DIR}/bundle/vendor
+    - bundle config set --local without 'development'
+    - bundle install
+    - sudo rm -rf /var/cache/omnibus/pkg/*
+    - sudo -E bundle exec omnibus build cinc-foundation -l ${OMNIBUS_LOG_LEVEL} --override append_timestamp:false
+    - sudo mkdir -p ${CI_PROJECT_DIR}/data/freebsd/${PLATFORM_VER}
+    - sudo mv -v pkg/cinc*sh ${CI_PROJECT_DIR}/data/freebsd/${PLATFORM_VER}/
+  after_script:
+    - sudo chown -R gitlab-runner cache/ bundle/ data/ chef-foundation/
+    - sudo rm -rf /opt/cinc/
+  variables:
+    OMNIBUS_FIPS_MODE: "false"
+
 .package:macos:
   extends: .package
   script:
