--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -265,6 +265,16 @@ package:debian-12:aarch64:
     PLATFORM_VER: "12"
     OMNIBUS_FIPS_MODE: "false"
 
+package:freebsd-13:
+  extends: .package:freebsd
+  cache:
+    key: freebsd:13
+  tags:
+    - freebsd-13
+  variables:
+    PLATFORM_VER: "13"
+    OMNIBUS_FIPS_MODE: "false"
+
 package:macos-10.15:
   extends: .package:macos
   cache:
@@ -704,6 +714,15 @@ test:debian-12:aarch64:
   variables:
     PLATFORM_VER: "12"
 
+test:freebsd-13:
+  extends: .test:freebsd
+  needs:
+    - package:freebsd-13
+  tags:
+    - freebsd-13
+  variables:
+    PLATFORM_VER: "13"
+
 test:macos-10.15:
   extends: .test:macos
   needs:
@@ -983,6 +1002,7 @@ deploy:
     - package:debian-11:x86_64
     - package:debian-12:aarch64
     - package:debian-12:x86_64
+    - package:freebsd-13
     - package:macos-10.15
     - package:macos-11
     - package:macos-12
