--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -270,6 +270,16 @@ package:freebsd-13:
     PLATFORM_VER: "13"
     OMNIBUS_FIPS_MODE: "false"
 
+package:freebsd-14:
+  extends: .package:freebsd
+  cache:
+    key: freebsd:14
+  tags:
+    - freebsd-14
+  variables:
+    PLATFORM_VER: "14"
+    OMNIBUS_FIPS_MODE: "false"
+
 package:macos-10.15:
   extends: .package:macos
   cache:
@@ -724,6 +734,16 @@ test:freebsd-13:
     PLATFORM_VER: "13"
     OMNIBUS_FIPS_MODE: "false"
 
+test:freebsd-14:
+  extends: .test:freebsd
+  needs:
+    - package:freebsd-14
+  tags:
+    - freebsd-14
+  variables:
+    PLATFORM_VER: "14"
+    OMNIBUS_FIPS_MODE: "false"
+
 test:macos-10.15:
   extends: .test:macos
   needs:
@@ -1029,6 +1049,7 @@ deploy:
     - package:debian-12:x86_64
     - package:debian-13:riscv64
     - package:freebsd-13
+    - package:freebsd-14
     - package:macos-10.15
     - package:macos-11
     - package:macos-12
