--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,6 +130,18 @@ package:centos-8:ppc64le:
   variables:
     PLATFORM_VER: "8"
 
+package:centos-8:s390x:
+  extends: .package:centos
+  image: cincproject/omnibus-almalinux:8
+  cache:
+    key: centos:8:s390x
+  tags:
+    - docker-s390x
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "8"
+
 package:centos-9:x86_64:
   extends: .package:centos
   image: cincproject/omnibus-almalinux:9
@@ -158,6 +170,18 @@ package:centos-9:ppc64le:
     key: centos-stream:9:ppc64le
   tags:
     - docker-ppc64le-p9
+  variables:
+    PLATFORM_VER: "9"
+
+package:centos-9:s390x:
+  extends: .package:centos
+  image: cincproject/omnibus-almalinux:9
+  cache:
+    key: centos:9:s390x
+  tags:
+    - docker-s390x
+  needs:
+    - patch
   variables:
     PLATFORM_VER: "9"
 
@@ -396,30 +420,6 @@ package:ubuntu-18.04:aarch64:
     PLATFORM_VER: "18.04"
     OMNIBUS_FIPS_MODE: "false"
 
-package:rhel-7:s390x:
-  extends: .package:centos
-  image: cincproject/omnibus-rhel:7
-  cache:
-    key: rhel:7:s390x
-  tags:
-    - docker-s390x
-  needs:
-    - patch
-  variables:
-    PLATFORM_VER: "7"
-
-package:rhel-8:s390x:
-  extends: .package:centos
-  image: cincproject/omnibus-rhel:8
-  cache:
-    key: rhel:8:s390x
-  tags:
-    - docker-s390x
-  needs:
-    - patch
-  variables:
-    PLATFORM_VER: "8"
-
 package:ubuntu-20.04:x86_64:
   extends: .package:ubuntu
   image: cincproject/omnibus-ubuntu:20.04
@@ -553,6 +553,16 @@ test:centos-8:ppc64le:
   variables:
     PLATFORM_VER: "8"
 
+test:centos-8:s390x:
+  extends: .test:centos
+  image: cincproject/omnibus-almalinux:8
+  needs:
+    - package:centos-8:s390x
+  tags:
+    - docker-s390x
+  variables:
+    PLATFORM_VER: "8"
+
 test:centos-9:x86_64:
   extends: .test:centos
   image: cincproject/omnibus-almalinux:9
@@ -580,6 +590,16 @@ test:centos-9:ppc64le:
     - package:centos-9:ppc64le
   tags:
     - docker-ppc64le-p9
+  variables:
+    PLATFORM_VER: "9"
+
+test:centos-9:s390x:
+  extends: .test:centos
+  image: cincproject/omnibus-almalinux:9
+  needs:
+    - package:centos-9:s390x
+  tags:
+    - docker-s390x
   variables:
     PLATFORM_VER: "9"
 
@@ -733,26 +753,6 @@ test:opensuse-15:aarch64:
     - docker-aarch64
   variables:
     PLATFORM_VER: "15"
-
-test:rhel-7:s390x:
-  extends: .test:centos
-  image: cincproject/omnibus-rhel:7
-  needs:
-    - package:rhel-7:s390x
-  tags:
-    - docker-s390x
-  variables:
-    PLATFORM_VER: "7"
-
-test:rhel-8:s390x:
-  extends: .test:centos
-  image: cincproject/omnibus-rhel:8
-  needs:
-    - package:rhel-8:s390x
-  tags:
-    - docker-s390x
-  variables:
-    PLATFORM_VER: "8"
 
 test:rockylinux-8:x86_64:
   extends: .test:rockylinux
@@ -931,6 +931,8 @@ deploy:
     - package:centos-9:aarch64
     - package:centos-9:ppc64le
     - package:centos-9:x86_64
+    - package:centos-8:s390x
+    - package:centos-9:s390x
     - package:debian-9:x86_64
     - package:debian-11:aarch64
     - package:debian-11:x86_64
@@ -947,8 +949,6 @@ deploy:
 #   - package:macos-14:aarch64
     - package:opensuse-15:aarch64
     - package:opensuse-15:x86_64
-    - package:rhel-7:s390x
-    - package:rhel-8:s390x
     - package:rockylinux-8:aarch64
     - package:rockylinux-8:x86_64
     - package:rockylinux-9:aarch64
