--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,6 +164,49 @@ package:centos-9:s390x:
   variables:
     PLATFORM_VER: "9"
 
+package:centos-10:x86_64:
+  extends: .package:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  cache:
+    key: centos-stream:10:x86_64
+  tags:
+    - docker-x86_64-v3
+  variables:
+    PLATFORM_VER: "10"
+
+package:centos-10:aarch64:
+  extends: .package:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  cache:
+    key: centos-stream:10:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "10"
+    OMNIBUS_FIPS_MODE: "false"
+
+package:centos-10:ppc64le:
+  extends: .package:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  cache:
+    key: centos-stream:10:ppc64le
+  tags:
+    - docker-ppc64le-p9
+  variables:
+    PLATFORM_VER: "10"
+
+package:centos-10:s390x:
+  extends: .package:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  cache:
+    key: centos:10:s390x
+  tags:
+    - docker-s390x
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "10"
+
 package:debian-9:x86_64:
   extends: .package:debian
   image: cincproject/omnibus-debian:9
@@ -565,6 +608,47 @@ test:centos-9:s390x:
   variables:
     PLATFORM_VER: "9"
 
+test:centos-10:x86_64:
+  extends: .test:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  needs:
+    - package:centos-10:x86_64
+  tags:
+    - docker-x86_64-v3
+  variables:
+    PLATFORM_VER: "10"
+
+test:centos-10:aarch64:
+  extends: .test:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  needs:
+    - package:centos-10:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "10"
+    OMNIBUS_FIPS_MODE: "false"
+
+test:centos-10:ppc64le:
+  extends: .test:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  needs:
+    - package:centos-10:ppc64le
+  tags:
+    - docker-ppc64le-p9
+  variables:
+    PLATFORM_VER: "10"
+
+test:centos-10:s390x:
+  extends: .test:centos
+  image: cincproject/omnibus-almalinux:10-kitten
+  needs:
+    - package:centos-10:s390x
+  tags:
+    - docker-s390x
+  variables:
+    PLATFORM_VER: "10"
+
 test:debian-9:x86_64:
   extends: .test:debian
   image: cincproject/omnibus-debian:9
@@ -905,12 +989,16 @@ deploy:
     - package:amazonlinux-2023:aarch64
     - package:centos-8:aarch64
     - package:centos-8:ppc64le
+    - package:centos-8:s390x
     - package:centos-8:x86_64
     - package:centos-9:aarch64
     - package:centos-9:ppc64le
-    - package:centos-9:x86_64
-    - package:centos-8:s390x
     - package:centos-9:s390x
+    - package:centos-9:x86_64
+    - package:centos-10:aarch64
+    - package:centos-10:ppc64le
+    - package:centos-10:s390x
+    - package:centos-10:x86_64
     - package:debian-9:x86_64
     - package:debian-11:aarch64
     - package:debian-11:x86_64
