--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -300,25 +300,25 @@ package:macos-13:
     PLATFORM_VER: "13"
     OMNIBUS_FIPS_MODE: "false"
 
-# package:macos-14:
-#   extends: .package:macos
-#   cache:
-#     key: macos-14
-#   tags:
-#     - macos-14
-#   variables:
-#     PLATFORM_VER: "14"
-#     OMNIBUS_FIPS_MODE: "false"
+package:macos-14:
+  extends: .package:macos
+  cache:
+    key: macos-14
+  tags:
+    - macos-14
+  variables:
+    PLATFORM_VER: "14"
+    OMNIBUS_FIPS_MODE: "false"
 
-# package:macos-15:
-#   extends: .package:macos
-#   cache:
-#     key: macos-15
-#   tags:
-#     - macos-15
-#   variables:
-#     PLATFORM_VER: "15"
-#     OMNIBUS_FIPS_MODE: "false"
+package:macos-15:
+  extends: .package:macos
+  cache:
+    key: macos-15
+  tags:
+    - macos-15
+  variables:
+    PLATFORM_VER: "15"
+    OMNIBUS_FIPS_MODE: "false"
 
 package:macos-12:aarch64:
   extends: .package:macos
@@ -350,25 +350,25 @@ package:macos-13:aarch64:
     PLATFORM_VER: "13"
     OMNIBUS_FIPS_MODE: "false"
 
-# package:macos-14:aarch64:
-#   extends: .package:macos
-#   cache:
-#     key: macos-14-aarch64
-#   tags:
-#     - macos-14-aarch64
-#   variables:
-#     PLATFORM_VER: "14"
-#     OMNIBUS_FIPS_MODE: "false"
+package:macos-14:aarch64:
+  extends: .package:macos
+  cache:
+    key: macos-14-aarch64
+  tags:
+    - macos-14-aarch64
+  variables:
+    PLATFORM_VER: "14"
+    OMNIBUS_FIPS_MODE: "false"
 
-# package:macos-15:aarch64:
-#   extends: .package:macos
-#   cache:
-#     key: macos-15-aarch64
-#   tags:
-#     - macos-15-aarch64
-#   variables:
-#     PLATFORM_VER: "15"
-#     OMNIBUS_FIPS_MODE: "false"
+package:macos-15:aarch64:
+  extends: .package:macos
+  cache:
+    key: macos-15-aarch64
+  tags:
+    - macos-15-aarch64
+  variables:
+    PLATFORM_VER: "15"
+    OMNIBUS_FIPS_MODE: "false"
 
 package:opensuse-15:x86_64:
   extends: .package:opensuse
@@ -774,15 +774,25 @@ test:macos-13:
     OMNIBUS_FIPS_MODE: "false"
     PLATFORM_VER: "13"
 
-# test:macos-14:
-#   extends: .test:macos
-#   needs:
-#     - package:macos-14
-#   tags:
-#     - macos-14
-#   variables:
-#     PLATFORM_VER: "14"
-#     OMNIBUS_FIPS_MODE: "false"
+test:macos-14:
+  extends: .test:macos
+  needs:
+    - package:macos-14
+  tags:
+    - macos-14
+  variables:
+    PLATFORM_VER: "14"
+    OMNIBUS_FIPS_MODE: "false"
+
+test:macos-15:
+  extends: .test:macos
+  needs:
+    - package:macos-15
+  tags:
+    - macos-15
+  variables:
+    PLATFORM_VER: "15"
+    OMNIBUS_FIPS_MODE: "false"
 
 test:macos-12:aarch64:
   extends: .test:macos
@@ -804,25 +814,25 @@ test:macos-13:aarch64:
     PLATFORM_VER: "13"
     OMNIBUS_FIPS_MODE: "false"
 
-# test:macos-14:aarch64:
-#   extends: .test:macos
-#   needs:
-#     - package:macos-14:aarch64
-#   tags:
-#     - macos-14-aarch64
-#   variables:
-#     PLATFORM_VER: "14"
-#     OMNIBUS_FIPS_MODE: "false"
+test:macos-14:aarch64:
+  extends: .test:macos
+  needs:
+    - package:macos-14:aarch64
+  tags:
+    - macos-14-aarch64
+  variables:
+    PLATFORM_VER: "14"
+    OMNIBUS_FIPS_MODE: "false"
 
-# test:macos-15:aarch64:
-#   extends: .test:macos
-#   needs:
-#     - package:macos-15:aarch64
-#   tags:
-#     - macos-15-aarch64
-#   variables:
-#     PLATFORM_VER: "15"
-#     OMNIBUS_FIPS_MODE: "false"
+test:macos-15:aarch64:
+  extends: .test:macos
+  needs:
+    - package:macos-15:aarch64
+  tags:
+    - macos-15-aarch64
+  variables:
+    PLATFORM_VER: "15"
+    OMNIBUS_FIPS_MODE: "false"
 
 test:opensuse-15:x86_64:
   extends: .test:opensuse
@@ -1054,10 +1064,10 @@ deploy:
     - package:macos-12:aarch64
     - package:macos-13
     - package:macos-13:aarch64
-    # - package:macos-14
-    # - package:macos-14:aarch64
-    # - package:macos-15
-    # - package:macos-15:aarch64
+    - package:macos-14
+    - package:macos-14:aarch64
+    - package:macos-15
+    - package:macos-15:aarch64
     - package:opensuse-15:aarch64
     - package:opensuse-15:x86_64
     - package:rockylinux-8:aarch64
@@ -1122,10 +1132,10 @@ cleanup:macos-14:
   tags:
     - macos-14
 
-#cleanup:macos-15:
-#  extends: .cleanup
-#  tags:
-#    - macos-15
+cleanup:macos-15:
+  extends: .cleanup
+  tags:
+    - macos-15
 
 cleanup:macos-12-aarch64:
   extends: .cleanup
